--- a/client/src/pages/DashboardPage.css
+++ b/client/src/pages/DashboardPage.css
@@ -19,7 +19,7 @@
   border-bottom: 2px solid var(--color-red);
   border-radius: 0;
   position: sticky;
-  top: 52px;
+  top: calc(52px + var(--safe-top));
   z-index: 9999;
 }
 
